k8s/applications/automation/hassio/ha-mcp-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-mcp
  namespace: home-assistant
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - "ha-mcp.smadja.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ha-mcp
          namespace: home-assistant
          port: 8086
